# pulse-launcher

./: .gitignore  LICENSE  README.md  launcher.config.example.json  pyproject.toml  requirements.txt
docs/: quickstart.md
examples/strategy-catalog/buy_and_hold/: manifest.json
examples/strategy-catalog/buy_and_hold/presets/: default.json
examples/strategy-catalog/ema_cross/: manifest.json
examples/strategy-catalog/ema_cross/presets/: scalp-20-50.json  swing-40-200.json
pulse_launcher/: __init__.py  __main__.py  app.py  keyring.py  settings.py  storage.py
